--- a/website/layouts/footer.html
+++ b/website/layouts/footer.html
@@ -24,7 +24,7 @@
                 <ul class="nav nav-list">
                     <li class="nav-header">Resources</li>
                     <li><a href="http://github.com/apache/incubator-geode" target="_blank">GitHub Code</a></li>
-                    <li><a href="http://geode.docs.pivotal.io" target="_blank">Docs</a></li>
+                    <li><a href="/docs/">Docs</a></li>
                     <li><a href="https://issues.apache.org/jira/browse/GEODE" target="_blank">JIRA Bug Tracker</a></li>
                     <li><a href="http://stackoverflow.com/search?q=Apache%20Geode" target="_blank">StackOverflow</a></li>
                     <li><a href="/community/#live">Live Chat</a></li>
