GEODE-1204 modified conditionals and opacity to make logo visible on Releases page.
Closes #45971

--- a/website/layouts/header.html
+++ b/website/layouts/header.html
@@ -230,7 +230,7 @@
 </head>
 <body>
 
-    <header class="navbar navbar-inverse navbar-fixed-top bf-docs-nav <%= 'secondary' if @docs or @community %>" role="banner">
+    <header class="navbar navbar-inverse navbar-fixed-top bf-docs-nav <%= 'secondary' if @docs or @community or @releases %>" role="banner">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bf-navbar-collapse">
