--- a/website/layouts/default.html
+++ b/website/layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%= render 'header', {:docs => @docs, :community => @community} %>
+<%= render 'header', {:docs => @docs, :community => @community, :releases => @releases} %>
 
 <%= @content %>
 
