GEODE-2156: Replace incubator egg with ASF feather logo

--- a/website/layouts/footer.html
+++ b/website/layouts/footer.html
@@ -64,6 +64,7 @@
         <div class="row">
           <center>
             <div id="copyright">
+                <a href="http://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
                 <p>Copyright © 2016 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.<br>
                 Apache, Apache Geode, and the Apache feather logos are trademarks of The Apache Software Foundation.</p>
                 <p>Site designed & assembled with love by <a href="https://github.com/ryuneeee">@ryuneeee</a> + <a href="https://github.com/realbeast">@realbeast</a> + <a href="https://twitter.com/timanglade">@timanglade</a> + <a href="https://twitter.com/snoopdave">@snoopdave</a> for Apache Usergrid.</p>
