GEODE-2031 Edit Nanoc config/rules to use extensions

--- a/website/layouts/default.html
+++ b/website/layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%= render 'header', {:docs => @docs, :community => @community, :releases => @releases} %>
+<%= render '/header.*', {:docs => @docs, :community => @community, :releases => @releases} %>
 
 <%= @content %>
 
-<%= render 'footer' %>
+<%= render '/footer.*' %>
 
 
 </body>
