--- a/website/layouts/releases.html
+++ b/website/layouts/releases.html
@@ -1,1 +1,1 @@
-<%= render 'default', :releases => true, :content => @content, :item => @item %>
+<%= render '/default.*', :releases => true, :content => @content, :item => @item %>
