--- a/website/layouts/community.html
+++ b/website/layouts/community.html
@@ -1,1 +1,1 @@
-<%= render 'default', :community => true, :content => @content, :item => @item %>
+<%= render '/default.*', :community => true, :content => @content, :item => @item %>
