--- a/website/layouts/docs.html
+++ b/website/layouts/docs.html
@@ -1,1 +1,1 @@
-<%= render 'default', :docs => true, :content => @content, :item => @item %>
+<%= render '/default.*', :docs => true, :content => @content, :item => @item %>
