--- a/css/geode-site.css
+++ b/css/geode-site.css
@@ -727,12 +727,12 @@ section > .container > h2 {
 }
 
 .bf-community img {
-  border-radius: 4px;
-  border: solid 1px rgb(52, 73, 94);
+  #border-radius: 4px;
+  #border: solid 1px rgb(52, 73, 94);
   margin-top: 20px;
   margin-bottom: 10px;
   width: 100%;
-  box-shadow: rgb(52, 73, 94) 2px 2px 4px;
+  #box-shadow: rgb(52, 73, 94) 2px 2px 4px;
 }
 
 .bf-releases img {
