--- a/website/content/css/geode-site.css
+++ b/website/content/css/geode-site.css
@@ -1501,7 +1501,7 @@ h2.icns-tools:before{
 }
 
 /* desert scheme ported from vim to google prettify */
-pre.prettyprint { display: block; background-color: #333 }
+pre.prettyprint { display: block; background-color: #D4D4D4 }
 pre .nocode { background-color: none; color: #000 }
 pre .str { color: #ffa0a0 } /* string  - pink */
 pre .kwd { color: #f0e68c; font-weight: bold }
