--- a/website/layouts/footer.html
+++ b/website/layouts/footer.html
@@ -45,7 +45,8 @@
                     <li><a href="https://www.apache.org/foundation/sponsorship.html" target="_blank">Sponsorship</a></li>
                     <li><a href="https://www.apache.org/foundation/thanks.html" target="_blank">Thanks</a></li>
                     <li><a href="https://www.apache.org/security/">Security</a></li>
-                    <li><a href="https://www.apache.org/" target="_blank">Apache Foundation</a></li>
+					<li><a href="https://privacy.apache.org/policies/privacy-policy-public.html">Privacy</a>
+                    <li><a href="https://www.apache.org/" target="_blank">Apache Software Foundation</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
@@ -66,8 +67,8 @@
           <center>
             <div id="copyright">
                 <a href="https://www.apache.org" target="_blank"><img src="/img/asf_logo.png" height="125"></a><br/><br/>
-                <p>Copyright © 2016 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.<br>
-                Apache, Apache Geode, and the Apache feather logos are trademarks of The Apache Software Foundation.</p>
+                <p>Copyright © 2025 The Apache Software Foundation, Licensed under the Apache License, Version 2.0.<br>
+                Apache Geode, Apache, Geode, the Apache logo, and the Apache Geode project logo are either registered trademarks or trademarks of The Apache Software Foundation in the United States and other countries.</p>
                 <p>Site designed & assembled with love by <a href="https://github.com/ryuneeee">@ryuneeee</a> + <a href="https://github.com/realbeast">@realbeast</a> + <a href="https://twitter.com/timanglade">@timanglade</a> + <a href="https://twitter.com/snoopdave">@snoopdave</a> for Apache Usergrid.</p>
                 <p>Modified for Apache Geode by <a href="https://twitter.com/william_markito">@william_markito</a>.</p>
             </div>
