Add section heading
This commit add a section heading, "Key Features," to introduce the site
section devoted to Geode's most noteworthy and useful features.

Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/website/content/css/geode-site.css
+++ b/website/content/css/geode-site.css
@@ -472,7 +472,7 @@ section > .container > h2 {
   /* border-bottom: 1px solid #e5e5e5; */
 }
 .bf-features {
-  color: white;
+  color: rgb(52,73,94);
   text-align: center;
   padding: 20px 0;
 }
